--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -86,6 +86,7 @@ $0 < |x − a| < \delta$, $|f (x ) − l | < \epsilon$.
 ```
 
 The absolute value $|\cdot|$ in this definition plays the role of general distance function $\|\cdot\|$ which would be appropriate for the functions from $\mathbb{R}^n$ to $\mathbb{R}^k$.
+We will also use $d(x,a)$ to denote distance, i.e. $d(x,a) = |x-a|$.
 
 Suppose that the limit of $f$ as $x$ approaches $a$ is $l$. We can write this as
 
@@ -106,7 +107,7 @@ Suppose that we want to attempt to show that $\lim _{x \rightarrow a} f(x)=b$.
 In order to do this, we need to show that, for any choice $\epsilon>0$, there exists some $\delta_{\epsilon}>0$ such that, whenever $|x-a|<\delta_{\epsilon}$, it is the case that $|f(x)-b|<\epsilon$.
 - We write $\delta_{\epsilon}$ to indicate that the choice of $\delta$ is allowed to vary with the choice of $\epsilon$.
 
-An often fruitful approach to the construction of a formal $\epsilon-\delta$ limit argument is to proceed as follows: 
+An often fruitful approach to the construction of a formal $\epsilon$-$\delta$ limit argument is to proceed as follows: 
 1. Start with the end-point that we need to establish: $|f(x)-b|<\epsilon$.
 2. Use appropriate algebraic rules to rearrange this "final" inequality into something of the form $|k(x)(x-a)|<\epsilon$.
 3. This new version of the required inequality can be rewritten as $|k(x)||(x-a)|<\epsilon$.
@@ -120,7 +121,7 @@ In other words, we try and find some restriction on $\delta$ that will ensure th
 If $0<|k(x)|<K$ whenever $0<\delta<D$, then we have
 
 $$
-|k(x)||x-a|<\epsilon \Longleftrightarrow K|x-a|<\epsilon \Longleftrightarrow|x-a|<\frac{\epsilon}{K} .
+|k(x)||x-a|<\epsilon \Longleftarrow K|x-a|<\epsilon \Longleftrightarrow|x-a|<\frac{\epsilon}{K} .
 $$
 
 In such cases, an appropriate choice of $\delta_{\epsilon}$ is $\delta_{\epsilon}=\min \left\{\frac{\epsilon}{K}, D\right\}$.
