Update after lecture week 6

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1322,7 +1322,8 @@ The same approach can be used for defining third and higher order derivative.
 The $n$-th order derivative of a function $f \colon \mathbb{R} \to \mathbb{R}$, if it exists, is the derivative of it's $(n-1)$-th order derivative treated as an independent function.
 
 $$
-f^{(k)}(x)=\frac{d^{k} f}{d x^{k}}=\frac{d}{d x}\left(\frac{d^{k-1} f}{d x^{k-1}}\right)
+f^{(k)}(x)=\frac{d^{k} f}{\underbrace{dx \cdots dx}_{k}}=
+\frac{d}{d x}\left(\frac{d^{k-1} f}{\underbrace{dx \cdots dx}_{k-1}}\right)
 $$
 
 for all $k \in\{1,2, \cdots, n\}$, where we define
@@ -1688,8 +1689,32 @@ Constant own-price elasticity!
 Alternatively we could compute this elasticity as
 
 $$
-Q &= a/P \quad \Leftrightarrow \quad \ln Q = \ln a - \ln P \\
+Q &= a/P = a P^{-1} \quad \Leftrightarrow \quad \ln Q = \ln a - \ln P \\
 \epsilon^D_P (P) &= \frac{d \ln Q}{d \ln P} = -1
 $$
 
 ```
+
+
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/26mar/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/3.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/4.png
+   :width: 75%
+```
+```{image} _static/img/notes/26mar/5.png
+   :width: 75%
+```
+
+````
