--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -16,6 +16,15 @@ kernelspec:
 This is a DRAFT of the future lecture!
 ```
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Starting with a review and [point elasticities](https://math.iskh.me/06.univariate_differentiation.html#point-elasticities)
+
+````
+
+
 # 📖 Vector and matrix arithmetics 
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
