Missing definition added

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1357,6 +1357,13 @@ $$
 
 ## Taylor series
 
+```{admonition} Definition
+:class: caution
+
+The function $f: X \to \mathbb{R}$ is said to be of differentiability class $C^m$ if derivatives $f'$, $f''$, $\dots$, $f^{(m)}$ exist and are continuous on $X$
+
+```
+
 ```{admonition} Fact
 :class: important
 
