Draft of the multivariate differentiation lectures

--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -1,6 +1,25 @@
-# Multivariate differential calculus
+---
+jupytext:
+  formats: md:myst
+  text_representation:
+    extension: .md
+    format_name: myst
+kernelspec:
+  display_name: Python 3
+  language: python
+  name: python3
+---
+
+```{admonition} DRAFT
+:class: danger
+
+This is a DRAFT of the future lecture!
+```
+
+# 📖 Multivariate differential calculus
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 
 ````{dropdown} Sources and reading guide
 
@@ -30,8 +49,7 @@ Mathematics textbooks:
 ````
 
 
-
-## Our objective
+```{admonition} Our objective
 
 We want to extend our discussion of differential calculus to a setting in which there is more than one choice variable. In other words, we want to examine multivariate real-valued functions.
 
@@ -40,12 +58,17 @@ These are functions of the form $f: X \rightarrow \mathbb{R}$, where $X \subsete
 Often we will write such functions as $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$.
 
 We will be focussing on two concepts. These are **partial derivatives** and **total differentials**.
+```
 
+## Single-real-valued multivariate functions
 
+```{admonition} Definition
+:class: caution
 
-### Single-real-valued multivariate functions
+A function $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}^{n}$
+where $n \in \mathbb{N} \backslash\{1\}$ is a **single-real-valued multivariate function**
 
-Let $f: X \longrightarrow \mathbb{R}$, where $X \subseteq \mathbb{R}^{n}$ and $n \in \mathbb{N} \backslash\{1\}$. This type of function is a **single-real-valued multivariate function**.
+```
 
 - It is single-real-valued because, for any choice of inputs (independent variables), it produces a single real number as the output (dependent variable). The output might vary with the choice of inputs.
 - It is multi-variate because there is more than one input (independent variable).
@@ -103,6 +126,9 @@ $$
 Note that $f_{k}\left(x_{k} ; \bar{x}_{-k}\right)$ will potentially depend on the values taken by all of the independent variables, not just on the one that is allowed to vary.
 
 
+```{admonition} Definition
+:class: caution
+
 The formal definition of the partial derivative of the function $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ with respect to the variable $x_{k}$ is
 
 $$
@@ -112,6 +138,8 @@ $$
 \end{aligned}
 $$
 
+```
+
 Note that if we think of $f\left(x_{k}, x_{-k}\right)$ as a univariate function of $x_{k}$ alone, then this definition collapses to the definition of the first-order derivative of a univariate function.
 
 
@@ -119,11 +147,21 @@ Note that if we think of $f\left(x_{k}, x_{-k}\right)$ as a univariate function 
 - Consider a function $f: S \longrightarrow \mathbb{R}^{n}$.
 - This function can be written as $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$.
 - The vector of first-order partial derivatives of $f$ at the point $x$, $\left(\frac{\partial f(x)}{\partial x_{1}}, \frac{\partial f(x)}{\partial x_{2}}, \cdots, \frac{\partial f(x)}{\partial x_{n}}\right)^{T}$, is sometimes known as the gradient vector of $f$ at $x$. It is commonly denoted by one of $D_{x} f(x), \nabla f(x)$, or $\operatorname{grad} f(x)$.
-- Theorem: If all $n$ of the first-order partial derivatives of $f$ exist and are continuous at the point $x \in X \subseteq \mathbb{R}^{n}$, then the function $f$ is differentiable at the point $x \in X \subseteq \mathbb{R}^{n}$.
+
+```{admonition} Fact
+:class: important
+
+If all $n$ of the first-order partial derivatives of $f$ exist and are continuous at the point $x \in X \subseteq \mathbb{R}^{n}$, then the function $f$ is differentiable at the point $x \in X \subseteq \mathbb{R}^{n}$.
+
+```
+
 - Terminology: The function $f(x)$ is said to be "(at least) once continuously differentiable on $X$ " if and only if all of the first-order partial derivatives of $f$ exist and are continuous on $X$.
 
 
-```{dropdown} Example 1
+```{admonition} Example
+:class: tip
+
+
 
 Let $f(x, y)=2 x^{2}-x y+y^{2}$. We will use the definition of a partial derivative find the partial derivative of $f$ with respect to $x$. We have
 
@@ -145,7 +183,10 @@ $$
 ```
 
 
-```{dropdown} Example 2
+```{admonition} Example
+:class: tip
+
+
 
 Let $f(x, y)=x^{3} y+e^{x y^{2}}=x^{3} y+\exp \left(x y^{2}\right)$. We will use our knowledge of univariate calculus to find the partial derivative of $f$ with respect to $x$ and the partial derivative of $f$ with respect to $y$. We have
 
@@ -638,11 +679,13 @@ The matrix $D_{x x^{T}}^{2}(x)$ is called the **Hessian matrix** of $f$ at the p
 - If $f$ is twice-differentiable at every point $x \in X$, then $f$ is said to be twice-differentiable on $X$.
 - If $f$ is twice-differentiable on $X$ and $\frac{\partial^{2} f}{\partial x_{k} \partial x_{i}}$ is a continuous function on $X$ for all $(i, k) \in\{1,2, \cdots, n\} \times\{1,2, \cdots, n\}$, then $f$ is said to be twice continuously differentiable on $X$. This is denoted by $f \in C^{2}$ on $X$.
 
-```{admonition} Young's theorem
-:class: caution
+```{admonition} Example
+:class: tip
+
 If $f \in C^{2}$ on $X$, then $\frac{\partial^{2} f}{\partial x_{k} \partial x_{i}}=\frac{\partial^{2} f}{\partial x_{i} \partial x_{k}}$ for all $i \neq k$.
 
 Young's theorem ensures that the Hessian matrix for $f$ will be symmetric when $f \in C^{2}$ on $X$.
+
 ```
 
 It is possible to extend the process of differentiation for multivariate functions to even higher orders than second-order derivatives. Doing so for partial derivatives is relatively straight-forward. However, this will not be done in this course.
@@ -707,7 +750,10 @@ This result is known as Young's theorem.  The result is trivially true when $i=j
 
 The result is also true, and much more interesting, when $i \neq j$. This is the case of second-order cross partial derivatives.
 
-```{dropdown} Example 1
+```{admonition} Example
+:class: tip
+
+
 Recall the example in which
 
 $$
@@ -782,7 +828,10 @@ Note that $f_{x y}(x, y)=f_{y x}(x, y)$ in this example.
 
 
 
-```{dropdown} Example 2
+```{admonition} Example
+:class: tip
+
+
 
 Young's theorem is only guaranteed to hold when the underlying function $f$ is at least twice continuously differentiable in the neighbourhood of the point of interest.
 
@@ -897,6 +946,9 @@ If the function is twice continuously differentiable in all of its arguments and
 
 This is Theorem 15.2 in {cite:ps}`simon1994` (p. 341).
 
+```{admonition} Fact
+:class: important
+
 Suppose that $G\left(x_{1}, x_{2}, \cdots, x_{n}, y\right)$ is a function that is at least once continuously differentiable around the point $\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}, y^{*}\right)$. Suppose also that
 
 $$
@@ -913,14 +965,20 @@ $$
 Under these conditions, there is a function $y\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ defined on some open ball $B$ around the point $\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}\right)$ that is at least once continuously differentiable such that:
 
 $$
-\begin{gathered}
-\text { (a) } G\left(x_{1}, x_{2}, \cdots, x_{n}, y\left(x_{1}, x_{2}, \cdots, x_{n}\right)\right)=c \\
-\text { for all }\left(x_{1}, x_{2}, \cdots, x_{n}\right) \in B, \\
-\text { (b) } y^{*}=y\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}\right) \text {; and } \\
-\text { (c) } \frac{\partial y}{\partial x_{i}}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}\right)=-\left(\frac{\frac{\partial G}{\partial x_{i}}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}, y^{*}\right)}{\frac{\partial G}{\partial y}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}, y^{*}\right)}\right) \\
-\text { for each } i \in\{1,2, \cdots, n\} .
-\end{gathered}
+G\left(x_{1}, x_{2}, \cdots, x_{n}, y\left(x_{1}, x_{2}, \cdots, x_{n}\right)\right)=c \\
+\text { for all }\left(x_{1}, x_{2}, \cdots, x_{n}\right) \in B
 $$
+
+$$
+y^{*}=y\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}\right)
+$$
+
+$$
+\frac{\partial y}{\partial x_{i}}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}\right)=-\left(\frac{\frac{\partial G}{\partial x_{i}}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}, y^{*}\right)}{\frac{\partial G}{\partial y}\left(x_{1}^{*}, x_{2}^{*}, \cdots, x_{n}^{*}, y^{*}\right)}\right) \\
+\text { for each } i \in\{1,2, \cdots, n\}
+$$
+
+```
 
 
 ### Derivatives of implicit functions
@@ -1254,6 +1312,9 @@ which is the formula for the slope of an isocost line for a firm with a producti
 
 This is Theorem 15.9 in {cite:ps}`simon1994` (p. 367).
 
+```{admonition} Fact
+:class: important
+
 Consider a function of the form $f: \mathbb{R}^{n} \longrightarrow \mathbb{R}^{n}$.
 
 Suppose that:
@@ -1265,6 +1326,8 @@ If this is the case, then:
 - (i) There exists an open ball $B_{r}\left(x^{*}\right)$ around the point $x^{*}$, and an open set $V$ around the point $y^{*}$, such that $f: B_{r}\left(x^{*}\right) \longrightarrow V$ is both one-to-one and onto;
 - (ii) The inverse map $f^{-1}: V \longrightarrow B_{r}\left(x^{*}\right)$ is at least once continuously differentiable; and
 - (iii) The derivative of the inverse function at the point $x^{*}$ is equal to the inverse of the derivative function at the point $x^{*}$ (that is $\left(D_{x} f^{-1}\right)\left(f\left(x^{*}\right)=\left(D_{x} f\left(x^{*}\right)\right)^{-1}\right)$.
+
+```
 
 
 
@@ -1326,6 +1389,9 @@ This function can be written as $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$.
 
 Let $\lambda>0$ be a positive real number.
 
+```{admonition} Definition
+:class: caution
+
 The function $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ is said to be **homogeneous of degree $r$** if
 
 $$
@@ -1334,7 +1400,14 @@ $$
 
 for all $\left(x_{1}, x_{2}, \cdots, x_{n}\right) \in S$ and all $\lambda>0$.
 
+```
+
+```{admonition} Definition
+:class: caution
+
 A function that is homogeneous of degree one is said to be **linearly homogeneous**.
+
+```
 
 
 Homogeneity is a cardinal property, not an ordinal one.
@@ -1345,11 +1418,16 @@ A discussion of homotheticity can be found in {cite:ps}`simon1994` (pp. 483 and 
 
 ## Euler's theorem
 
+```{admonition} Fact
+:class: important
+
 Suppose that the function $f\left(x_{1}, x_{2}, \cdots, x_{n}\right)$ is homogeneous of degree $r$. In this case we have
 
 $$
 \sum_{i=1}^{n} x_{i}\left(\frac{\partial f}{\partial x_{i}}\right)=r f\left(x_{1}, x_{2}, \cdots, x_{n}\right) .
 $$
+
+```
 
 This result is known as **Euler's theorem**.
 
@@ -1522,7 +1600,6 @@ $$
 Thus the production function for a production technology that displays decreasing returns to scale is either homogeneous of degree less than one or it is not homogeneous.
 
 ```{admonition} Note
-:class: tip
 
 A simple replication argument would suggest that decreasing returns to scale do not make any sense.
 
@@ -1550,7 +1627,6 @@ $$
 Thus the production function for a production technology that displays constant returns to scale will be homogeneous of degree one. (Homogeneity of degree one is sometimes referred to as linear homogeneity.)
 
 ```{admonition} Note
-:class: tip
 
 Constant returns to scale production technologies are employed in the standard versions of the neoclassical model of economic growth. This model is often referred to as the Solow-Swan model of economic growth, because one of the seminal papers on this model was written by Robert Solow and the other was written by Trevor Swan. Note that the late Trevor Swan was an Australian economist who worked at the Australian National University.
 
@@ -1578,7 +1654,6 @@ Thus the production function for a production technology that displays increasin
 
 
 ```{admonition} Note
-:class: tip
 
 The returns to scale displayed by some production technologies might vary with input vector.  In such cases, the production technology will not necessarily display either constant returns to scale or increasing returns to scale over the entire set of possible values for the input vector.
 ```
