--- a/07.linear_systems.md
+++ b/07.linear_systems.md
@@ -104,3 +104,10 @@ Existence of solutions
 
 Example
 
+
+```{dropdown} Further reading and self-learning
+
+- Excellent visualizations of concepts partially covered in this lecture, strongly recommended for further study
+[3Blue1Brown: Essence of linear algebra](https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab)
+
+```
