Update to reminders

--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -15,7 +15,10 @@ kernelspec:
 :class: note
 :class: dropdown
 
-1. Starting with a review and [point elasticities](https://math.iskh.me/06.univariate_differentiation.html#point-elasticities)
+1. Welcome to the second half of the course! 
+2. Don't forget about the Online Test on **Monday April 22**.
+3. Starting with a review and [point elasticities](https://math.iskh.me/06.univariate_differentiation.html#point-elasticities)
+
 
 ````
 
