Typos and notes for week 7

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -1543,7 +1543,7 @@ The two terms that make up marginal revenue for a monopolist can be given a very
 
 ### Point elasticities
 
-```{admonition} Definition
+```{admonition} Definition (in words)
 :class: caution
 
 Suppose that $y=f(x)$. The **elasticity of $y$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$.
@@ -1578,11 +1578,13 @@ Define a new function $g$ such that $f(x) = g\big(\ln(x)\big)$ and $f\big(x(1+r)
 Continuing the above, and noting that $\ln(1+r) \to 0$ as $r \to 0$ we have
 
 $$
+\begin{array}{l}
 = \frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{r} = \\ =
 \frac{1}{f(x)} \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \frac{\ln(1+r)}{r} = \\ =
 \frac{1}{f(x)} \left[ \lim_{r \to 0} \frac{g\big(\ln(x) + \ln(1+r)\big)-g\big(\ln(x)\big)}{\ln(1+r)} \lim_{r \to 0} \frac{\ln(1+r)}{r} \right] =\\=
 \frac{1}{f(x)} \frac{d g(\ln(x))}{d \ln(x)} = 
 \frac{1}{f(x)} \frac{d f(x)}{d \ln(x)} = \frac{x}{f(x)} \frac{d f(x)}{d x}
+\end{array}
 $$
 
 See the example above showing that $\lim_{r \to 0} \frac{\ln(1+r)}{r} = 1$.
@@ -1591,7 +1593,7 @@ In the last step, to make sense of the expression $\frac{d f(x)}{d \ln(x)}$, ima
 Then we can use the chain rule and the inverse function rule to show that
 
 $$
-\frac{d f(x)}{d \ln(x)} = \frac{d f(x)}{d x} \frac{dx}{d \ln(x)} = \frac{d f(x)}{d x} \frac{1}{\frac{1}{x}} = x 
+\frac{d f(x)}{d \ln(x)} = \frac{d f(x)}{d x} \frac{dx}{d \ln(x)} = \frac{d f(x)}{d x} \frac{1}{\frac{1}{x}} = x \frac{d f(x)}{d x}
 $$
 
 Note, in addition, that by the chain rule the following also holds
@@ -1600,7 +1602,9 @@ $$
 \frac{d \ln f(x)}{d \ln(x)} = \frac{1}{f(x)} \frac{d f(x)}{d \ln(x)}
 $$
 
-```{admonition} Definition
+Putting everything together, we arrive at the following equivalent expressions for elasticity.
+
+```{admonition} Definition (exact)
 :class: caution
 
 The (point) **elasticity of $f(x)$ with respect to $x$** is defined to be the percentage change in $y$ that is induced by a small (*infinitesimal*) percentage change in $x$, and is given by
@@ -1648,7 +1652,7 @@ $$
 \end{align*}
 $$
 
-More generally, we can show that, for the linear demand cuve above, we have
+More generally, we can show that, for the linear demand curve above, we have
 
 $$
 | \epsilon^D_P (P) | =
