--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -129,23 +129,25 @@ x_{L}(p, y)
 $$
 
 
-- The $(n \times k)$ "design matrix" (that is, matrix of independent variables) in a multivariate linear regression model of the form
+- The $(n \times k)$ *design matrix* (that is, matrix of independent variables) in a multivariate linear regression model of the form
 
 $$
-y_{i}=\beta_{0}+\sum_{j=1}^{k-1} \beta_{j} x_{i, j}+\epsilon_{i}
+y_{i} = 
+\beta_{1}+\sum_{j=2}^{k} \beta_{j} x_{i, j}+\epsilon_{i} =
+\sum_{j=1}^{k} \beta_{j} x_{i, j}+\epsilon_{i}
 $$
 
 where there are observations of all of the observable variables for each of $n$ sample points.
 
-- This matrix takes the form
+- The design matrix takes the form
 
 $$
 X=\left(\begin{array}{ccccc}
-1 & x_{1,2} & x_{1,3} & \cdots & x_{1,(k-1)} \\
-1 & x_{2,2} & x_{2,3} & \cdots & x_{2,(k-1)} \\
-1 & x_{3,2} & x_{3,3} & \cdots & x_{3,(k-1)} \\
+1 & x_{1,2} & x_{1,3} & \cdots & x_{1,k} \\
+1 & x_{2,2} & x_{2,3} & \cdots & x_{2,k} \\
+1 & x_{3,2} & x_{3,3} & \cdots & x_{3,k} \\
 \vdots & \vdots & \vdots & \ddots & \vdots \\
-1 & x_{n, 2} & x_{n, 3} & \cdots & x_{n,(k-1)}
+1 & x_{n, 2} & x_{n, 3} & \cdots & x_{n,k}
 \end{array}\right)
 $$
 
@@ -1686,6 +1688,21 @@ In other words, the determinant is invariant under elementary row or column oper
 - Finding Eigenvalues and eigenvectors
 - Determining positive definiteness of matrices
 - etc, etc.
+
+
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/16apr/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/16apr/2.png
+   :width: 75%
+```
+
+````
 
 
 ```{dropdown} Further reading and self-learning
