--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -1582,7 +1582,7 @@ $$
 \quad \quad
 \mathrm{det}
 \left(
-\begin{array}{ccc}
+\begin{array}{cccc}
 2,& 1,& 0,& 0 \\
 1,& 2,& 0,& 0 \\
 0,& 0,& 2,& 0 \\
