--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -75,14 +75,12 @@ Consider a *univariate* function $f: \mathbb{R} \rightarrow \mathbb{R}$ written 
 
 The domain of $f$ is $\mathbb{R}$, the range of $f$ is a (possibly improper) subset of $\mathbb{R}$
 
-{cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$,
-if we can make $f(x)$ as close as we like to $l$ by requiring that $x$ be sufficiently close to, but unequal to, $a$.”
+{cite:ps}`spivak2006` (p. 90) provides the following informal definition of a limit: “The function $f$ approaches the limit $l$ near [the point $x =$] $a$, if we can make $f(x)$ as close as we like to $l$ by requiring that $x$ be sufficiently close to, but unequal to, $a$.”
 
 ```{admonition} Definition
 :class: caution
 
-The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as
-$0 < |x − a| < \delta$, $|f (x ) − l | < \epsilon$.
+The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as $0 < |x − a| < \delta$, $|f(x) − l | < \epsilon$.
 ```
 
 The absolute value $|\cdot|$ in this definition plays the role of general distance function $\|\cdot\|$ which would be appropriate for the functions from $\mathbb{R}^n$ to $\mathbb{R}^k$.
@@ -90,7 +88,7 @@ We will also use $d(x,a)$ to denote distance, i.e. $d(x,a) = |x-a|$.
 
 Suppose that the limit of $f$ as $x$ approaches $a$ is $l$. We can write this as
 
-$$ \lim_{x  \rightarrow a} f (x ) = l $$
+$$ \lim_{x  \rightarrow a} f(x) = l $$
 
 
 ```{figure} _static/img/lecture_06/epsilon_delta.png
@@ -276,8 +274,8 @@ We want to show that $lim_{x \rightarrow 2} f(x ) = −1$.
 - Note that $|f(x) − (−1)| = |x^2 − 3x + 1 + 1| = |x^2 − 3x + 2| = |(x − 1)(x − 2)| = |x − 1||x − 2|$.
 - Suppose that $|x − 2| < \delta$, which in turn means that $(2 − \delta) < x < (2 + \delta)$. Thus we have $(1 − \delta) < (x − 1) < (1 + \delta)$.
 - Let us restrict attention to $\delta \in (0, 1)$. This gives us $0 < (x − 1) < 2$, so that $|x − 1| < 2$.
-- Thus, when $|x − 2| < \delta$ and $\delta \in (0, 1)$, we have $|f (x ) − (−1)| = |x − 1||x − 2| < 2\delta$.
-- We require $|f (x ) − (−1)| < \epsilon$. One way to ensure this is to set $\delta_\epsilon = \min(1, \frac{\epsilon}{2} )$.
+- Thus, when $|x − 2| < \delta$ and $\delta \in (0, 1)$, we have $|f(x) − (−1)| = |x − 1||x − 2| < 2\delta$.
+- We require $|f(x) − (−1)| < \epsilon$. One way to ensure this is to set $\delta_\epsilon = \min(1, \frac{\epsilon}{2} )$.
 ```
 
 
@@ -286,9 +284,9 @@ We want to show that $lim_{x \rightarrow 2} f(x ) = −1$.
 
 Limits can sometimes exist even when the function being considered is not so well behaved. One such example is provided by {cite:ps}`spivak2006` (pp. 91–92). It involves the use of a trigonometric function.
 
-The example involves the function $f: \mathbb{R} \setminus 0 \rightarrow \mathbb{R}$ that is defined by $f (x ) = x sin ( \frac{1}{x})$.
+The example involves the function $f: \mathbb{R} \setminus 0 \rightarrow \mathbb{R}$ that is defined by $f(x) = x sin ( \frac{1}{x})$.
 
-Clearly this function is not defined when $x = 0$. Furthermore, it can be shown that $\lim_{x  \rightarrow 0} sin ( \frac{1}{x})$ does not exist. However, it can also be shown that $lim_{x  \rightarrow 0} f (x ) = 0$.
+Clearly this function is not defined when $x = 0$. Furthermore, it can be shown that $\lim_{x  \rightarrow 0} sin ( \frac{1}{x})$ does not exist. However, it can also be shown that $lim_{x  \rightarrow 0} f(x) = 0$.
 
 The reason for this is that $sin (\theta) \in [−1, 1]$ for all $\theta \in \mathbb{R}$. Thus $sin ( \frac{1}{x} )$ is bounded above and below by finite numbers as $x \rightarrow 0$. This allows the $x$ component of $x sin (\frac{1}{x})$ to dominate as $x \rightarrow 0$.
 ```
@@ -307,7 +305,7 @@ f(x ) = \begin{cases}
 \end{cases}
 $$
 
-We want to show that $\lim_{x  \rightarrow 5} f (x )$ does not exist.
+We want to show that $\lim_{x  \rightarrow 5} f(x)$ does not exist.
 
 Suppose that the limit does exist. Denote the limit by $l$. Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$. Let $\delta > 0$.
 
@@ -316,13 +314,13 @@ If $|5 − x | < \delta$, then $5 − \delta < x < 5 + \delta$, so that $x \in (
 Note that $x \in (5 − \delta, 5 + \delta) = (5 − \delta, 5) \cup [5, 5 + \delta)$, where $(5 − \delta, 5) \ne \varnothing$ and $[5, 5 + \delta) \ne \varnothing$.
 
 Thus we know the following:
-1. There exist some $x \in (5 − \delta, 5) \subseteq (5 − \delta, 5 + \delta)$, so that $f (x ) = 0$ for some $x \in (5 − \delta, 5 + \delta)$.
-2. There exist some $x \in [5, 5 + \delta) \subseteq (5 − \delta, 5 + \delta)$, so that $f (x ) = 1$ for some $x \in (5 − \delta, 5 + \delta)$.
-3. The image set under $f$ for $(5 − \delta, 5 + \delta)$ is $f ((5 − \delta, 5 + \delta)) = \{ f (x ) : x \in (5 − \delta, 5 + \delta) \} = \{ 0, 1 \} \subseteq [0, 1]$.
+1. There exist some $x \in (5 − \delta, 5) \subseteq (5 − \delta, 5 + \delta)$, so that $f(x) = 0$ for some $x \in (5 − \delta, 5 + \delta)$.
+2. There exist some $x \in [5, 5 + \delta) \subseteq (5 − \delta, 5 + \delta)$, so that $f(x) = 1$ for some $x \in (5 − \delta, 5 + \delta)$.
+3. The image set under $f$ for $(5 − \delta, 5 + \delta)$ is $f ((5 − \delta, 5 + \delta)) = \{ f(x) : x \in (5 − \delta, 5 + \delta) \} = \{ 0, 1 \} \subseteq [0, 1]$.
 4. Note that for any choice of $\delta > 0$, $[0, 1]$ is the smallest connected interval that contains the image set $f ((5 − \delta, 5 + \delta)) = \{ 0, 1 \}$.
 
 Hence, in order for the limit to exist, we need $[0, 1] \subseteq (l − \epsilon, l + \epsilon)$
-for all $\epsilon > 0$.  But for $\epsilon \in (0, \frac{1}{2})$, there is no $l \in \mathbb{R}$ for which this is the case.  Thus we can conclude that $\lim_{x  \rightarrow 5} f (x )$ does not exist.
+for all $\epsilon > 0$.  But for $\epsilon \in (0, \frac{1}{2})$, there is no $l \in \mathbb{R}$ for which this is the case.  Thus we can conclude that $\lim_{x  \rightarrow 5} f(x)$ does not exist.
 ```
 
 
@@ -437,7 +435,7 @@ where
 3. If $f$ and $g$ are continuous at $x$ and real valued then so is
 $f \circ g$, where
 :::{math}
-(f \circ g)(x) := f(x) \cdot g(x)
+(f \circ g)(x) := f( g(x))
 :::
 In the latter case, if in addition $g(x) \ne 0$, then $f/g$ is also continuous.
 
@@ -509,29 +507,29 @@ Consider the mapping $f : \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) =
 
 Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$.
 
-Note that $|f (2) − f (x )| = |f (x ) − f (2)| = |x^2 − 4| = |x − 2||x + 2|$.
+Note that $|f (2) − f(x)| = |f(x) − f (2)| = |x^2 − 4| = |x − 2||x + 2|$.
 
 Suppose that $|2 − x | < \delta$. This means that $|x − 2| < \delta$, which in turn means that $(2 − \delta) < x < (2 + \delta)$. Thus we have $(4 − \delta) < (x + 2) < (4 + \delta)$.
 
 Let us restrict attention to $\delta \in (0, 1)$. This gives us $3 < (x + 2) < 5$, so that $|x + 2| < 5$.
 
-We have $|f (2) − f (x )| = |f (x ) − f (2)| = |x − 2||x + 2| < (\delta)(5) = 5\delta$.
+We have $|f (2) − f(x)| = |f(x) − f (2)| = |x − 2||x + 2| < (\delta)(5) = 5\delta$.
 
-We require $|f (2) − f (x )| < \epsilon$. One way to ensure this is to set $\delta = min(1, \frac{\epsilon}{5})$.
+We require $|f (2) − f(x)| < \epsilon$. One way to ensure this is to set $\delta = min(1, \frac{\epsilon}{5})$.
 ```
 
 ```{admonition} Example
 :class: tip
 
-Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x$. We want to show that $f (x )$ is continuous for all $x \in X$.
+Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x ) = x$. We want to show that $f(x)$ is continuous for all $x \in X$.
 
 Recall that $d (x, y ) = \{ (y − x )2 \}^{\frac{1}{2}} = |y − x |$.
 
-Consider an arbitrary point $x = a$. Note that $|f (a) − f (x )| = |a − x |$.
+Consider an arbitrary point $x = a$. Note that $|f (a) − f(x)| = |a − x |$.
 
 Suppose that $|a − x | < \delta$.
 
-Note that if we set $\delta = \epsilon$, we have $|f (a) − f (x )| < \epsilon$. 
+Note that if we set $\delta = \epsilon$, we have $|f (a) − f(x)| < \epsilon$. 
 
 Thus we know that $f$ is continuous at the point $x = a$. Since $a$ was chosen arbitrarily, we now that this is true for all $a \in \mathbb{R}$. This means that $f$ is continuous for all $x \in \mathbb{R}$.
 ```
@@ -550,11 +548,11 @@ f(x ) =
 \end{cases}
 $$
 
-We have already shown that $\lim_{x  \rightarrow 5} f (x )$ does not exist. This means that it is impossible for $lim_{x  \rightarrow 5} f (x ) = f (5)$. As such, we know that $f (x )$ is not continuous at the point $x = 5$.
+We have already shown that $\lim_{x  \rightarrow 5} f(x)$ does not exist. This means that it is impossible for $lim_{x  \rightarrow 5} f(x) = f (5)$. As such, we know that $f(x)$ is not continuous at the point $x = 5$.
 
-This means that f (x ) is not a continuous function. 
+This means that f(x) is not a continuous function. 
 
-However, it can be shown that (i) $f(x )$ is continuous on the interval $(−\infty, 5)$, and that (ii) $f (x )$ is continuous on the interval $(5, \infty)$. Can
+However, it can be shown that (i) $f(x )$ is continuous on the interval $(−\infty, 5)$, and that (ii) $f(x)$ is continuous on the interval $(5, \infty)$. Can
 you explain why this is the case?
 ```
 
@@ -565,7 +563,7 @@ you explain why this is the case?
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by 
 
 $$
-f (x ) = \begin{cases}
+f(x) = \begin{cases}
 \frac{1}{x} \quad \text{ if } x \ne 0; \\
 0 \quad \text{ if } x = 0.
 \end{cases}
@@ -582,7 +580,7 @@ This function is discontinuous at the point $x = 0$. *Illustrate the graph of th
 Consider the mapping $f: \mathbb{R} \rightarrow \mathbb{R}$ defined by
 
 $$
-f (x ) = \begin{cases} 
+f(x) = \begin{cases} 
 1 \quad \text{ if } x \in Q; \\
 0 \quad \text{ if } x \notin Q
 \end{cases}
@@ -600,7 +598,7 @@ If it exists, the derivative of a function tells us the direction and magnitude 
 
 If it exists, the derivative of a function at a point is equal to the slope of the straight line that is tangent to the function at that point. 
 
-You should try and guess now what the derivative of a linear function of the form $f (x ) = ax + b$ will be.
+You should try and guess now what the derivative of a linear function of the form $f(x) = ax + b$ will be.
 
 ### Definition
 
