Online test 3 results + other announcements

--- a/07.linear_systems.md
+++ b/07.linear_systems.md
@@ -10,6 +10,22 @@ kernelspec:
   name: python3
 ---
 
+````{admonition} Announcements & Reminders
+:class: note
+:class: dropdown
+
+1. Online Test on **Monday April 22**
+
+```{figure} _static/misc/online_test3.png
+:width: 30%
+:align: left
+```
+
+2. Next two lectures will be given by my postdoc **Esben Scriver Andersen**
+
+````
+
+
 # 📖 Systems of linear equations
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
