Typos and notes after week 8 lecture

--- a/06.univariate_differentiation.md
+++ b/06.univariate_differentiation.md
@@ -80,7 +80,7 @@ The domain of $f$ is $\mathbb{R}$, the range of $f$ is a (possibly improper) sub
 ```{admonition} Definition
 :class: caution
 
-The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x =$] $a$ if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as $0 < |x − a| < \delta$, $|f(x) − l | < \epsilon$.
+The function $f: \mathbb{R} \rightarrow \mathbb{R}$ approaches the limit $l$ near [the point $x = a$] if for every $\epsilon > 0$, there is some $\delta > 0$ such that, for all $x$ such as $0 < |x − a| < \delta$, $|f(x) − l | < \epsilon$.
 ```
 
 The absolute value $|\cdot|$ in this definition plays the role of general distance function $\|\cdot\|$ which would be appropriate for the functions from $\mathbb{R}^n$ to $\mathbb{R}^k$.
