--- a/07.linear_algebra.md
+++ b/07.linear_algebra.md
@@ -1674,7 +1674,7 @@ $$
 If some row or column of $A$ is added to another one after being multiplied by a scalar $\alpha \ne 0$, 
 then the determinant of the resulting matrix is the same as the determinant of $A$.
 
-In other words, the determinant is invariant under elementary row or column operations of Gaussian elimination.
+In other words, the determinant is invariant under elementary row or column operations of type 3 (see [next lecture](https://math.iskh.me/07.linear_systems.html#determinants-under-gaussian-elimination)).
 
 ```
 - we will talk about this next week
