--- a/07.linear_systems.md
+++ b/07.linear_systems.md
@@ -312,7 +312,10 @@ A matrix is said to be in **reduced row echelon form** if it satisfies one addit
 - the leading entry in each row is 1
 - each column containing a leading 1 has all other entries equal to zero
 
+The first nonzero entry of each row is called a **pivot**
+
 ```
+
 
 ```{figure} _static/img/lecture_08/row_echelon.png
 :width: 40%
@@ -1006,6 +1009,25 @@ Therefore, the solution is $(x,y,z) = (\frac{29}{19},-\frac{40}{19},-2)$
 
 ```
 
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/23apr/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/23apr/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/23apr/3.png
+   :width: 75%
+```
+```{image} _static/img/notes/23apr/4.png
+   :width: 75%
+```
+
+````
 
 
 
