--- a/07.linear_systems.md
+++ b/07.linear_systems.md
@@ -978,7 +978,7 @@ D_1 =
 -3 & -1 & -3 
 \end{array}\right)
 =
--15+6-6+3+36+5 = 29
+-15+6-6+3+36-5 = 19
 $$
 
 $$
@@ -990,7 +990,7 @@ D_2 =
 1 & -3 & -3 
 \end{array}\right)
 =
--18+5-6+6-30+3 = -40
+-18-5+6+6-30+3 = -38
 $$
 
 $$
@@ -1002,10 +1002,10 @@ D_3 =
 1 & -1 & -3 
 \end{array}\right)
 =
--18+6-5+6-30+3 = -38
+3+12+10-5+12+6 = 38
 $$
 
-Therefore, the solution is $(x,y,z) = (\frac{29}{19},-\frac{40}{19},-2)$
+Therefore, the solution is $(x,y,z) = (\frac{D_1}{19},\frac{D_2}{19},\frac{D_3}{19}) = (1,-2,2)$
 
 ```
 
