--- a/08.multivariate_differential_calculus.md
+++ b/08.multivariate_differential_calculus.md
@@ -10,12 +10,6 @@ kernelspec:
   name: python3
 ---
 
-```{admonition} DRAFT
-:class: danger
-
-This is a DRAFT of the future lecture!
-```
-
 # 📖 Multivariate differential calculus (part 1)
 
 <small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
@@ -50,9 +44,9 @@ Mathematics textbooks:
 
 ```{admonition} Our objective
 
-We want to extend our discussion of differential calculus from univariate real-valued functions, $f(x_1)$, to multivariate real-valued functions, $f(x_1,x_2,\dots,x_n)$.
+We want to extend our discussion of differential calculus from single-real-valued univariate functions, $f(x_1)$, to single-real-valued multivariate, $f(x_1,x_2,\dots,x_n)$.
 
-We will be focussing on two concepts. These are **partial derivatives** and **total differentials**.
+We will be focussing on two concepts. These are **partial derivatives** and **total differentiation**.
 ```
 
 ## Notation
@@ -95,7 +89,7 @@ Consider the single-real-valued multivariate function $f(x_1,x_2) = \sqrt{x_1 - 
 :name: domain_and_target
 :width: 100%
 
-Illustrations of domain and range of $f$.
+Illustrations of domain and target of $f$.
 ```
 
 In economic analysis we will often use single-real-valued multivariate functions to represent
@@ -160,16 +154,21 @@ $$ -->
 ```{admonition} Definition
 :class: caution
 
-The formal definition of the partial derivative of the single-real-valued function $f$ with respect to the variable $x_{k}$ is
+The partial derivative of the single-real-valued multivariate function $f$ with respect to the variable $x_{k}$ is defined as
 
 $$
 \begin{aligned}
-\frac{\partial f\left(\mathbf{x}\right)}{\partial x_{k}} = \lim _{h \rightarrow 0}\left\{\frac{f\left(x_{1}, \dots, x_{k} + h, x_{k+1}, \dots, x_n\right)}{h}\right\} .
+\frac{\partial f\left(\mathbf{x}\right)}{\partial x_{k}} = \lim _{h \rightarrow 0}\left\{\frac{f\left(x_{1}, \dots, x_{k} + h, x_{k+1}, \dots, x_n\right) - f\left(x_{1}, \dots, x_{k}, x_{k+1}, \dots, x_n\right)}{h}\right\} .
 \end{aligned}
 $$
 ```
 
-The partial derivative is approximately equal to the per-unit change in $f$ caused by an increase in $x_i$, while holding everything else constant.
+```{figure} _static/img/lecture_08/partial_derivative.png
+:name: Simplified illustration of partial derivative.
+:width: 100%
+
+Illustrations of domain and target of $f$.
+```
 
 Note that the partial derivative, $\partial f\left(\mathbf{x}\right)/\partial x_k$, is a single-real-valued multivariate function itself, as it in general depend on all the independent variables.
 
@@ -222,6 +221,9 @@ f_1(x_1,x_2)=x_2.
 $$
 
 ```
+Some terminologi:
+- If $\partial f\left(\mathbf{x}\right)/\partial x_k$ exist for each $k$, we say that $f$ is differentiable at $\mathbf{x}$.
+- If these $n$ partial derivative functions are continuous, we say that $f$ is continously differentiable at $\mathbf{x}$. This is denoted by $f \in C^{1}$ on $X$.
 
 ### Some economic applications
 
@@ -488,7 +490,8 @@ $$
 $$
 
 We can use these elasticities to classify the types of commodities that are being considered:
-- If $\varepsilon_{y}^{k}>0$, then commodity $k$ is a normal good. If $\varepsilon_{y}^{k}<0$, then commodity $k$ is an inferior good.
+- If $\varepsilon_{y}^{k}>0$, then commodity $k$ is a normal good. 
+- If $\varepsilon_{y}^{k}<0$, then commodity $k$ is an inferior good.
 - If $\varepsilon_{l}^{k}>0$, then commodities $k$ and $l$ are substitutes. 
 - If $\varepsilon_{l}^{k}<0$, then commodities $k$ and $l$ are complements.
 - The demand curve for most commodities will usually slope down. As such, we would usually expect $\varepsilon_{k}^{k}<0$.
@@ -616,7 +619,7 @@ The above formula is a result known as Engel aggregation. It provides a relation
 
 ## Second-order partial derivatives
 
-Consider the function single-real-valued multivariate function $f\left(x_1,x_2,\dots,x_n \right)$. Recall that the if the first-order partial derivative exist it is also a single-real-valued multivariate function. The second-order partial derivative is given as the partial derivate of the first-order partial derivate
+Consider the function single-real-valued multivariate function $f\left(x_1,x_2,\dots,x_n \right)$. Recall that if the first-order partial derivative exist it is also a single-real-valued multivariate function. The second-order partial derivative is given as the partial derivate of the first-order partial derivate
 
 $$
 \frac{\partial^{2} f\left(x_{1}, x_{2}, \dots, x_{n}\right)}{\partial x_{j} \partial x_{i}}=\frac{\partial}{\partial x_{j}}\left(\frac{\partial f\left(x_{1}, x_{2}, \dots, x_{n}\right)}{\partial x_{i}}\right),
@@ -652,9 +655,7 @@ The Hessian is commonly denoted as $H(\mathbf{x})$, $\nabla^2 f(\mathbf{x})$, $D
 The elements on the diagonal of the Hessian are referred to as second-order own partial derivatives, and the elements off the diagonal are referred to as second-order cross partial derivatives.
 
 Some terminologi:
-- If $\partial f\left(\mathbf{x}\right)/\partial x_k$ exist for each $k$, we say that $f$ is differentiable at $\mathbf{x}$.
-- If these $n$ partial derivative functions are continuous, we say that $f$ is continously differentiable at $\mathbf{x}$.
-- If $f$ is twice-differentiable at every point $x \in X$, then $f$ is said to be twice-differentiable on $X$. This is denoted by $f \in C^{1}$ on $X$.
+- If $f$ is twice-differentiable at every point $x \in X$, then $f$ is said to be twice-differentiable on $X$.
 - If $f$ is twice-differentiable on $X$ and $\frac{\partial^{2} f}{\partial x_{k} \partial x_{i}}$ is a continuous function on $X$ for all combinations of $i$ and $j$ then $f$ is said to be twice continuously differentiable on $X$. This is denoted by $f \in C^{2}$ on $X$.
 
 It is possible to extend the process of differentiation for multivariate functions to even higher orders than second-order derivatives. Doing so for partial derivatives is relatively straight-forward. However, this will not be done in this course.
@@ -702,7 +703,7 @@ $$
 &= \tfrac{\partial}{\partial L} \left( \tfrac{\partial f(L,K)}{\partial K} \right) \\
 &= \tfrac{\partial}{\partial L} \left( \beta A L^{\alpha} K^{\beta-1}\right) \\
 &= \alpha \beta A L^{\alpha-1} K^{\beta-1} \\
-\tfrac{\partial^2 f(L,K)}{\partial K \partial L} 
+\tfrac{\partial^2 f(L,K)}{\partial K \partial K} 
 &= \tfrac{\partial}{\partial K} \left( \tfrac{\partial f(L,K)}{\partial K} \right) \\
 &= \tfrac{\partial}{\partial K} \left( \beta A L^{\alpha} K^{\beta-1}\right) \\
 &= \beta (\beta - 1) A L^{\alpha} K^{\beta-2}
@@ -772,10 +773,10 @@ df=x_2 dx_1 + x_1 dx_2.
 $$
 ```
 
-The total derivative, $df$, can be thought of as a linear approximation of the change in $f$ due to the change $dx$.
+The total derivative, $df$, can be thought of as a linear approximation of the change in $f$ due to the change $\mathbf{dx}$.
 
 $$
-df \approx f(\mathbf{x} + dx) - f(\mathbf{x}).
+df \approx f(\mathbf{x} + \mathbf{dx}) - f(\mathbf{x}).
 $$
 
 Hence, we can use total differentiation to approximate $f$ around the point $\mathbf{x}^0$
@@ -833,7 +834,7 @@ $$
 \frac{\dot{y}}{y} = \alpha g_L + \beta  g_K.
 $$
 
-The growth rate in the production is constant, and is given by dot product of the elasticities and growth rates with respect to each of the production inputs.
+The growth rate of the economy is constant, and is given by dot product of the elasticities and growth rates with respect to each of the production inputs.
 
 ```
 
